# PoS-Captcha

./: .gitignore  CHANGELOG.md  README.md  TECHNICAL_DOCS.md  run_prover.bat  test.html
extension/: background.js  (+5 more)
prover/: Cargo.toml  pos-config.json
prover/src/: api.rs  config.rs  consent.rs  crypto.rs  main.rs  plotter.rs
prover/src/Merkle_Tree/: client_verify.rs  mod.rs  structs.rs
prover/src/block_generation/: blockgen.rs  encoder.rs  mod.rs  utils.rs
prover/src/communication/: mod.rs  path_generator.rs  structs.rs
prover/target_cli/: .rustc_info.json
prover/target_cli/release/.fingerprint/actix-utils-cd7a40cc9476cabf/: lib-actix_utils  lib-actix_utils.json
prover/target_cli/release/.fingerprint/alloc-no-stdlib-4182125af05f3651/: lib-alloc_no_stdlib.json
prover/target_cli/release/.fingerprint/block-buffer-e6b616a759731dce/: lib-block_buffer
prover/target_cli/release/.fingerprint/block-padding-2b5080072d3fc9b9/: lib-block_padding  lib-block_padding.json
prover/target_cli/release/.fingerprint/brotli-decompressor-04a58efd96a770a3/: lib-brotli_decompressor  lib-brotli_decompressor.json
prover/target_cli/release/.fingerprint/bytes-e26991866678c0bf/: lib-bytes
prover/target_cli/release/.fingerprint/bytestring-bc94cacbc963b6a7/: lib-bytestring  lib-bytestring.json
prover/target_cli/release/.fingerprint/cc-b6f5d8140ef43d6a/: lib-cc.json
verifier/native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  pos-native.win32-x64-msvc.node
verifier/native/src/: lib.rs
verifier/wasm/: Cargo.toml
verifier/wasm/src/: lib.rs
(+134 files in other folders)
