[package]
name = "pos_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.4", default-features = false, features = ["napi4"] }
napi-derive = "2.16.4"
blake3 = "1.5.0"
rand = { version = "0.8.5", features = ["std"] }

[build-dependencies]
napi-build = "2.1.3"
