[package]
name = "pos-verifier-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
blake3 = "1.5"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"

[profile.release]
opt-level = "s"
lto = true
